dealt with the text overflow issue on description

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,10 +6,15 @@ h1 {
   font-size: 40px;
   margin: 0; 
 }
+h2 {
+  margin: 5px; 
+}
 p {
   text-align: left;
   margin: 0;
   height: 50px; 
+  padding-top: 5px; 
+  padding-left: 10px; 
 }
 .welcome-line {
   line-height: 80px;
@@ -71,11 +76,20 @@ p {
   border-radius: 4px;
 }
 .individual-article-in-the-list { 
-  height: 100px; 
+  height: 150px; 
   width: 400px; 
   border: 3px solid black;
   margin: 20px;
   border-radius: 10px;
+}
+.description-in-the-individual-article-list {
+  box-shadow: 0px -24px 3px -24px rgb(79, 179, 179);  
+  font-size: 14px;
+  font-family: 'Heebo', sans-serif; 
+  border-collapse: collapse;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 .create-new-form-div {
   margin: auto;
@@ -118,6 +132,9 @@ input, select {
 .navLink {
   text-decoration: none;
   color: rgba(79,179,179,1);
+  font-size: 14px;
+  font-family: 'Heebo', sans-serif;
+  margin: 0;
 }
 .description-box {
   overflow-wrap: break-word;
